Bug 1400359 - show user alert if pop server cannot be reached. r=frg